# piscine-python

py-00/ex00/: Hello.py
py-00/ex01/: format_ft_time.py
py-00/ex02/: find_ft_type.py  tester.py
py-00/ex03/: NULL_not_found.py
py-00/ex04/: whatis.py
py-00/ex05/: building.py
py-00/ex06/: filterstring.py  ft_filter.py
py-00/ex07/: sos.py
py-00/ex08/: Loading.py  tester.py
py-00/ex09/ft_package/: LICENSE  README.md  USAGE.txt  pyproject.toml
py-00/ex09/ft_package/src/ft_package/: __init__.py  sos.py
py-00/ex09/ft_package/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
