[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = {text = "MIT"}
authors = [
	{ name = "eagle", email = "eagle@42.fr"}
]
requires-python = ">=3.8"
urls = { "Home-page" = "https://github.com/eagle/ft_package" }
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
  	"Operating System :: OS Independent"
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]